to implement the changes in question in a way that is backward compatible (or
at least mostly so), and then to remove the old ways of doing things in a
subsequent version.

ADDED:

  * Added the dot product operator to expression question type.

  * Added process.py, containing some common operations relating to process
    management.

CHANGED:

  * rethinkdb is now a hard dependency.

  * The API for logging functions was changed, to avoid a special character as
    a separator.

  * Submissions are now handled asynchronously, and results are retrieved via
    web sockets.

  * Markdown no longer outputs <em> or <strong>, preferring <i> and <b> to
    improve browser compatibility.

  * Many images are now included in pages as data URI's rather than being
    loaded from a separate request.

  * Replaced the CSS-based loading spinner with an image.

  * Changed the password hashing scheme for the login authentication type to
    one based on:
    https://blogs.dropbox.com/tech/2016/09/how-dropbox-securely-stores-your-passwords/

  * Re-styled buttons throughout the system.

DEPRECATED:

REMOVED:

  * Removed CSS-only spinner, replaced with data URI for image in the base
    context.

  * Removed images for check/cross/favicon, replaced with data URI's in the
    base context.

  * Removed SQLite and catsoopdb as backends for logging.

FIXED:

  * Improved the Javascript code responsible for making sure the top menu
    doesn't block text when moving around a page.

  * Errors in the registration form now prevent submitting the form.

SECURITY:


#################
# Version 9.4.3 #
#################

ADDED:

  * Added the circuit question type.

  * Added support for nonscalar values in expression questions.

CHANGED:

  * Changed exponentiation to be right-associative in the expression question
    type.

FIXED:

  * Fixed a bug with rendering implicit multiplication in expression questions.

  * Fixed a bug with rendering of chained exponentiation in expression